2010-08-20  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Dan Bernstein.

        Media element canPlayType("application/octet-stream") not handled correctly
        https://bugs.webkit.org/show_bug.cgi?id=44343

        Test: media/media-can-play-octet-stream.html

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::applicationOctetStream): New, accessor for static string used more than once.
        (WebCore::textPlain): Ditto.
        (WebCore::codecs): Ditto.
        (WebCore::chooseBestEngineForTypeAndCodecs): Special case "application/octet-stream".
        (WebCore::MediaPlayer::load): Use static static string methods.
        (WebCore::MediaPlayer::supportsType): Special case "application/octet-stream".

2010-08-20  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        Media element canPlayType("application/octet-stream") not handled correctly
        https://bugs.webkit.org/show_bug.cgi?id=44343

        * media/media-can-play-octet-stream-expected.txt: Added.
        * media/media-can-play-octet-stream.html: Added.



Canonical link: https://commits.webkit.org/56538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65758 268f45cc-cd09-0410-ab3c-d52691b4dbfc